--- a/updater/versions.yml
+++ b/updater/versions.yml
@@ -1,3 +1,3 @@
 versions:
-  - "1.3;REQUIRED;NULL"
+  - "1.3;REQUIRED;https://github.com/mitriyf/JParkour/releases/download/1.3-release/JParkour.jar"
   - "1.2;RELEASE;NULL"
