--- a/updater/versions.yml
+++ b/updater/versions.yml
@@ -1,3 +1,4 @@
 versions:
+  - "1.4;REQUIRED;https://github.com/mitriyf/JParkour/releases/download/1.4-release/JParkour.jar"
   - "1.3;REQUIRED;https://github.com/mitriyf/JParkour/releases/download/1.3-release/JParkour.jar"
   - "1.2;RELEASE;NULL"
