--- a/src/main/resources/config13.yml
+++ b/src/main/resources/config13.yml
@@ -1,10 +1,10 @@
-###########################################################
-#                        JParkour                         #
-#                          v1.4                           #
-###########################################################
+############################################################
+#                         JParkour                         #
+#                           v1.5                           #
+############################################################
 
 # Don't remove the version setting.
-version: 1.4
+version: 1.5
 
 # Plugin settings.
 settings:
@@ -27,7 +27,8 @@ settings:
     amount: 999
     # Is it possible to delete the map after the game ends?
     # Set it to false if you are concerned about errors in the game console.
-    deleteWhenClosing: true
+    # When set to true, it may cause server crashes! The plugin automatically deletes worlds after launch.
+    deleteWhenClosing: false
   # Notification of updates.
   updater:
     # Is it enabled?
@@ -46,6 +47,7 @@ settings:
     # Tops settings.
     tops:
       # Enable Tops support.
+      # If you want to see the result of the tops through placeholders, the PlaceholderAPI feature must be enabled!
       enabled: true
       # How often will the tops be updated? (In seconds)
       updateInterval: 900
@@ -72,7 +74,7 @@ settings:
       item: GOLDEN_SWORD
       # Which key should I press?
       click_type: RIGHT_CLICK
-    bomb_blue:
+    bomb_diamond:
       block: BLUE_STAINED_GLASS
       blockData: 11
       in_block: TNT
@@ -116,6 +118,8 @@ messages:
   # // Replace $version$ with the version of your server, for example: https://helpch.at/docs/1.8.8/org/bukkit/Sound.html
   # [effect] type;duration;amplifier;delay - Give the effect to the player. The delay and duration is measured in ticks.
   # Find the types of effects here: https://helpch.at/docs/$version$/org/bukkit/potion/PotionEffectType.html
+  # [explosion] power;setFire;breakBlocks;delay;addX;addY;addZ - Create an explosion. The delay is measured in ticks.
+  # setFire, breakBlocks - set to false or true. addX, addY, addZ - double values that are added to the player's explosion location.
   # [bossbar] message;color;type;time;style;flag - Send a bossbar to a player with a message for a specific time. For 1.9+
   # Types:
   # stop - The bossbar will disappear after the time you specified in time (seconds)
@@ -133,10 +137,14 @@ messages:
   # %jparkour_rights% - Displays the number of clicks on the bomb.
   # %jparkour_maxrights% - Displays the maximum number of bomb clicks.
   # %jparkour_tops_SchematicName_Number_name% - Get the name of a player who is on a specific top.
+  # %jparkour_tops_SchematicName_Number_top% - Get a player's place in the top.
   # %jparkour_tops_SchematicName_Number_accuracy% - Get the accuracy of a player who is on a specific top.
   # %jparkour_tops_SchematicName_Number_time% - Get the exact completion time of a player who is on a specific top.
   #
   # Change "SchematicName" to the schematics' ID, and "Number" to the number in the top that you require.
+  # If you don't know the player's position in the top, you can get it by replacing "Number" with "name=PlayerName".
+  # Enter the player's nickname in PlayerName. Examples: %jparkour_tops_nether_1_top%,
+  # %jparkour_tops_nether_name=Mitriyf_top%, %jparkour_tops_nether_name=%player%_top%.
   #
   # Built-in placeholders:
   # %accuracy% - Display the player's execution accuracy.
@@ -157,7 +165,6 @@ messages:
       - "[message] &a/jparkour join &f- Create or join any available room."
       - "[message] &a/jparkour join roomId &f- Attempt to connect to the room (if it is free)."
       - "[message] &a/jparkour exit &f- Exit the game/queue."
-      - "[message] &a/jparkour item &f- Get a Item Help."
       - "[message] &a/jparkour admin &f- Get a Admin Help."
       - "[message] &a/jparkour reload &f- Reload the plugin configuration."
       - ""
@@ -184,6 +191,8 @@ messages:
       win: "&aVictory"
       left: "&fBlocks destroyed: &e%blocks%/&e%blocks_all%"
       right: "&fBombs repelled: &e%bombs%&f/&e%bombs_all%"
+    placeholders:
+      notClaimed: "Not claimed"
     actions:
       joined:
         - "[message] &aYou are connected to the game: &e%game%"
@@ -194,10 +203,12 @@ messages:
       end:
         - "[message] &cThe game is over."
       restarted:
+        - "[delay] 5"
         - "[message] &aThe game has been restarted."
       kicked:
         - "[message] &cThe game is over."
       damageHeart:
         - "[message] &c-1 &l♥"
+        - "[explosion] 1"
       win:
         - "[title] &aVictory;&e%star_win%&7%star_loss% &f- &e%accuracy%%"
