JParkour v1.5 | Innovations, fixes
Added:
- Now you can create multiple map points and move the chicken anywhere!
- Setting up whether it is possible to receive / give damage to someone who is in line.
- Cooldown for restart (with a message)
- Accelerated HEX and correction of incorrect colors when using minimessage mode. + check for minimessage support to avoid errors.
- some updates that might not have been included here...

Fixed:
- The code has been optimized.
- Some names have been changed for the standard.
- Updates from some releases may have been unsuccessful. (Everything is fine now)
- The running of the essence (chicken) has become more productive.
- Greater division into classes.

Instructions:
- Updating from the first version to the latest.
If you are updating from the very first version to the new one, you may encounter that the stands and entity (chicken) movement do not match the previous values. You can restore all these values by going to the plugin editor, highlighting the positions, and re-saving the map, after which everything should return to its standard form.
- Some of the original items in the editor do not work after the update.
You can fix this by assigning the correct stands in slots.yml or by changing the name of the stands in config.yml and the schema file.

I am looking for developers/testers who can watch this plugin and check how it works for you. Many thanks in advance to all those who tested it and expressed their opinion about it, as it contains many corrections and additions.

The plugin shows the best stability on these versions: 1.8.8, 1.12.2, 1.16.5

--- a/src/main/resources/config13.yml
+++ b/src/main/resources/config13.yml
@@ -4,7 +4,7 @@
 ############################################################
 
 # Don't remove the version setting.
-version: 1.5
+version: 1.5-RELEASE
 
 # Plugin settings.
 settings:
@@ -29,6 +29,8 @@ settings:
     # Set it to false if you are concerned about errors in the game console.
     # When set to true, it may cause server crashes! The plugin automatically deletes worlds after launch.
     deleteWhenClosing: false
+    # Specify in ticks the amount of delay for pressing the item marked restart. 1 second = 20 ticks.
+    restartCooldown: 100
   # Notification of updates.
   updater:
     # Is it enabled?
@@ -71,6 +73,8 @@ settings:
       # The type of stand.
       type: bomb
       # An item that can defeat a stand.
+      # Only an object with this material can defeat this stand!
+      # This is because versions 1.8 and above do not have CustomModelData.
       item: GOLDEN_SWORD
       # Which key should I press?
       click_type: RIGHT_CLICK
@@ -205,6 +209,8 @@ messages:
       restarted:
         - "[delay] 5"
         - "[message] &aThe game has been restarted."
+      cooldownRestart:
+        - "[message] &cYou can't reload the game that quickly."
       kicked:
         - "[message] &cThe game is over."
       damageHeart:
