--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,7 +4,7 @@
 ############################################################
 
 # Don't remove the version setting.
-version: 1.5
+version: 1.5-RELEASE
 
 # Plugin settings.
 settings:
@@ -25,10 +25,14 @@ settings:
     # Enter the maximum number of worlds that the plugin can use.
     # If the worlds are full, the player will be put in a queue and wait for any available server.
     amount: 999
+    # Can people get hurt while waiting for free play? (false - no, true - yes)
+    damageWaiters: false
     # Is it possible to delete the map after the game ends?
     # Set it to false if you are concerned about errors in the game console.
     # When set to true, it may cause server crashes! The plugin automatically deletes worlds after launch.
     deleteWhenClosing: false
+    # Specify in ticks the amount of delay for pressing the item marked restart. 1 second = 20 ticks.
+    restartCooldown: 100
   # Notification of updates.
   updater:
     # Is it enabled?
@@ -71,6 +75,8 @@ settings:
       # The type of stand.
       type: bomb
       # An item that can defeat a stand.
+      # Only an object with this material can defeat this stand!
+      # This is because versions 1.8 and above do not have CustomModelData.
       item: GOLD_SWORD
       # Which key should I press?
       click_type: RIGHT_CLICK
@@ -185,6 +191,7 @@ messages:
         - "[message] &cYou have left the queue."
       noExit:
         - "[message] &cYou are not in the game."
+    # You cannot use actions in statuses and placeholders.
     status:
       wait: "&eWaiting"
       start: "&fPlaying"
@@ -205,6 +212,8 @@ messages:
       restarted:
         - "[delay] 5"
         - "[message] &aThe game has been restarted."
+      cooldownRestart:
+        - "[message] &cYou can't reload the game that quickly."
       kicked:
         - "[message] &cThe game is over."
       damageHeart:
