--- a/updater/versions.yml
+++ b/updater/versions.yml
@@ -1,5 +1,5 @@
 versions:
-  - "1.5;RELEASE;https://github.com/mitriyf/JParkour/releases/download/1.5-release/JParkour.jar"
+  - "1.5;REQUIRED;https://github.com/mitriyf/JParkour/releases/download/1.5-release/JParkour.jar"
   - "1.4;REQUIRED;https://github.com/mitriyf/JParkour/releases/download/1.4-release/JParkour.jar"
   - "1.3;REQUIRED;https://github.com/mitriyf/JParkour/releases/download/1.3-release/JParkour.jar"
   - "1.2;RELEASE;NULL"
